<resources>

    <string name="app_name">Freskomarkt Turnos</string>

    <!-- activity_main.xml -->
    <string name="btnLogin">Iniciar Sesion</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="hintEmail">  Email</string>
    <string name="hintPass">  Password</string>
    <string name="warningLogin">!Atención¡ Te recomendamos que restablezcas tu contraseña. Te hemos enviado un mail para que puedas hacerlo ahora si quieres,
        si no, vuelve a hacer login y cambiala más tarde desde tu perfil</string>
    <string name="btnLoginGoogle">Ingresar con Google</string>

    <!-- ********************************************************************************************* -->

    <!-- activity_home.xml -->
    <!-- ********************************************************************************************* -->

    <!--Aactivity_add_quit_employee.xml -->
    <string name="rBtnAdd">Añadir empleado</string>
    <string name="rBtnDelete">Borrar empleado</string>
    <!-- ********************************************************************************************* -->

    <!-- layout_card_add.xml -->
    <string name="add_employee">Agregar un empleado</string>
    <string name="name">Nombre del nuevo empleado</string>
    <string name="hintNameAdd">  Nombre</string>
    <string name="hintSurnameAdd">  Apellidos</string>
    <string name="surname">Apellidos del nuevo empleado</string>
    <string name="addEmail">Email</string>
    <string name="hintEmailAdd">  Email</string>
    <string name="titleSectionAdd">Sección</string>
    <string name="titlePositionAdd">Puesto</string>
    <string name="spinnerSections"> </string>
    <string-array name="Sections">
        <item> ----- </item>
        <item>Sala</item>
        <item>Charcutería</item>
        <item>Pescadería</item>
        <item>Frutería</item>
        <item>Carnicería</item>
        <item>Panadería</item>
    </string-array>
    <string name="spinnerJob"> </string>
    <string-array name="Rol">
        <item> ----- </item>
        <item>Jefe de sección</item>
        <item>Empleado</item>
    </string-array>
    <string name="btnAdd">Agregar empleado</string>
    <string name="pass_adversiting">* La contraseña del empleado será la misma que su numero de empleado.
        Deberá cambiarla al iniciar sesión por primera vez.</string>
    <string name="congrats">Empleado creado correctamente</string> <!--Pertenece al success_activity.xml -->
    <!-- ********************************************************************************************* -->

    <!-- layout_card_delete.xml -->
    <string name="delete_employee">Borrar un empleado</string>
    <string name="titleSearch">Introduce el número del empleado</string>
    <string name="hintSearchNumber">000000</string>
    <string name="find">Buscar</string>
    <string name="btnDelete">Eliminar empleado</string>
    <!-- ********************************************************************************************* -->

    <!-- drawer_menu.xml -->
    <string name="open_drawer">Abrir menú</string>
    <string name="close_drawer">Cerrar menú</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_calendar">Mi Calendario</string>
    <string name="menu_profile">Mi Perfil</string>
    <string name="menu_addQuit">Añadir/Quitar empleado</string>
    <string name="menu_quitSession">Cerrar Sesión</string>
    <!-- ********************************************************************************************* -->

    <!-- activity_profile.xml -->
    <string name="myProfile">Mi Perfil</string>
    <string name="sectionProfile">Sección</string>
    <string name="jobProfile">Puesto</string>
    <string name="numEmployeeProfile">Nº Empleado</string>
    <string name="emailProfile">Email</string>
    <string name="profileCompleteName">Nombre completo</string>
    <string name="profileBtnResetPass">Restablecer contraseña</string>
    <string name="profileQuestionResetPass">¿Quieres cambiar tu contraseña?</string>
    <string name="profileEditEmail">Editar</string>
    <string name="OldEmailTitle">Introcude tu correo actual</string>
    <string name="newEmailTitle">Introduce tu correo nuevo</string>
    <string name="passTitle">Introduce tu contraseña</string>
    <string name="NumTitle">Número de empleado</string>
    <!-- ********************************************************************************************* -->

    <!-- activity_home.xml -->
    <string name="welcomeProfileTitle">Hola</string>
    <string name="turnTitle">Tu turno de hoy</string>
    <string name="tomorrowTurnTitle">Tu turno de mañana</string>
    <string name="weekTutnTitle">Tu turno de la semana</string>
    <!-- ********************************************************************************************* -->

    <!-- (deprecated) activity_reset_pass.xml (deprecated) -->
    <string name="caution">Restablecer contraseña</string>
    <string name="changePassTitle">Introduzca su correo electrónico</string>
    <string name="changePassInstruction">Se va a proceder a enviar un mail para que puedas restablecer tu contraseña. Por favor, ingresa tu correo electrónico</string>
    <string name="resetHint">ejemplo@gmail.com</string>
    <string name="btnNewPass">Restablecer contraseña</string>
    <!-- ********************************************************************************************* -->

    <!-- activity_calendar.xml -->
    <string name="titleSectionCalendar">Sección</string>
    <string name="employee_selection">Selecciona empleado</string>
    <string name="btn_schedule_card">Editar horario</string>
    <string name="btn_notes_card">Editar notas</string>
    <string name="otherScheduleTitle">Resto de turnos de la sección</string>
    <!-- ********************************************************************************************* -->

    <!-- dialog_schedule_notes.xml -->
    <string name="turn_assignment">Asigna un turno</string>
    <string-array name="Turns">
        <item> ----- </item>
        <item>Mañana</item>
        <item>Tarde</item>
        <item>Vacaciones</item>
        <item>Libre</item>
        <item>Borrar turno</item>
    </string-array>
    <string name="radio_morning">Mañana</string>
    <string name="radio_afternoon">Tarde</string>
    <string name="radio_free">Libre</string>
    <string name="radio_festive">Fiesta</string>
    <string name="btn_save">Guardar</string>
   <string name="notesTitle">Anotaciones</string>
   <string name="dailyNotes">Peticiones/Sugerencias:</string>
   <string name="btnAcceptNote">Aceptar</string>
   <string name="btnRejectNote">Rechazar</string>
   <string name="remember">Recuerda que tus anotaciones podrán ser vistas por el jefe de tienda. No escribas nada de caracter personal</string>
    <!-- ********************************************************************************************* -->

    <!-- notes_employee.layout -->
    <string name="cardviewTitle">Anotaciones/Propuestas</string>
    <string name="profileNotes">Mis anotaciones</string>
    <string name="titleSpinner">¿Que tipo de anotación vas a escribir?</string>
    <string-array name="Notes">
        <item> ----- </item>
        <item>Nota privada</item>
        <item>Peticion/Sugerencia</item>
    </string-array>
    <string name="privateNote">Nota privada</string>
    <string name="publicNote">Peticion/Sugerencia</string>
    <string name="noteTextViewHint">Escribe algo aquí</string>
    <string name="instructionsPublic">Esta sugerencia será enviada al jefe de tienda. Cuando la revise, podrás ver que el color del número del día cambiará</string>
    <string name="instructionsPrivate">Este tipo de nota es solo para tí, nadie mas podrá verla.</string>
    <string name="btnDeleteNote">Borrar</string>
    <string name="btnSaveNote">Guardar</string>

    <!-- ********************************************************************************************* -->

    <!-- legend.xml -->
    <string name="legendTitle">Leyenda</string>
    <string name="morningText">Turno mañana</string>
    <string name="afternoonText">Turno tarde</string>
    <string name="holidayText">Festivo</string>
    <string name="freeText">Libranza</string>
    <string name="btnExit">Cerrar leyenda</string>
    <string name="scheduleTitle">Turnos</string>
    <string name="notesTitleLegend">Anotaciones y sugerencias</string>
    <string name="publicNoteAcceptText">Sugerencia aceptada</string>
    <string name="publicNoteRejectText">Sugerencia rechazada</string>
    <string name="publicNoteStillText">Sugerencia pendiente de revisión</string>
    <string name="dayAccepted">Día con sugerencia aceptada</string>
    <string name="dayRejected">Día con sugerencia rechazada</string>
    <string name="dayStillWaiting">Día con sugerencia a la espera</string>
    <string name="privateNoteLegend">Anotación</string>
    <!-- ********************************************************************************************* -->

</resources>