<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorFondo"
    android:paddingLeft="30sp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/add_employee"
        android:textSize="25sp"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/name"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="280sp"
        android:layout_height="40sp"
        android:hint="@string/hintNameAdd"
        android:textColor="@color/textColor"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleName" />

    <TextView
        android:id="@+id/titleSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/surname"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editSurname"
        android:layout_width="280sp"
        android:layout_height="40sp"
        android:hint="@string/hintSurnameAdd"
        android:textColor="@color/textColor"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSurname" />

    <TextView
        android:id="@+id/titleEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="15sp"
        android:text="@string/addEmail"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSurname" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="280sp"
        android:layout_height="40sp"
        android:hint="@string/hintEmailAdd"
        android:textColor="@color/textColor"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEmail" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/titleSpinnerSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="45sp"
        android:layout_marginTop="70sp"
        android:text="@string/titleSectionAdd"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <TextView
        android:id="@+id/titleJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="45sp"
        android:layout_marginTop="70sp"
        android:text="@string/titlePositionAdd"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <Spinner
        android:id="@+id/spinnerSections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/Sections"
        android:background="@drawable/spinner_background_edited"
        android:popupBackground="@color/colorFondo"
        android:theme="@style/spinnerTextColor"
        android:layout_marginTop="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSpinnerSection" />

    <Spinner
        android:id="@+id/spinnerJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/Rol"
        android:background="@drawable/spinner_background_edited"
        android:popupBackground="@color/colorFondo"
        android:theme="@style/spinnerTextColor"
        android:layout_marginTop="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/titleJob" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:textStyle="italic"
        android:text="Introduce tu contraseña para terminar el proceso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSections" />

    <EditText
        android:id="@+id/editSuperPass"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:layout_marginTop="15sp"
        android:background="@android:color/white"
        android:hint="Password"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/naranjaPersonalOscuro"
        android:text="@string/btnAdd"
        android:layout_marginTop="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSuperPass" />
</androidx.constraintlayout.widget.ConstraintLayout>