<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="560dp"
    android:background="@color/colorFondo"
    android:paddingLeft="30sp">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_employee"
        style="@style/titleTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleSearch"
        style="@style/subtitleTextStyle"
        android:textSize="17dp"
        android:layout_marginTop="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <EditText
        android:id="@+id/editNumber"
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:hint="@string/hintSearchNumber"
        android:layout_marginTop="5sp"
        android:background="@drawable/edittext_style"
        android:padding="12dp"
        style="@style/currentText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleName" />

    <Button
        android:id="@+id/btnFind"
        android:layout_width="wrap_content"
        android:layout_height="37sp"
        app:strokeColor="@color/naranjaPersonalOscuro"
        android:backgroundTint="@color/naranjaPersonalOscuro"
        app:cornerRadius="0dp"
        android:elevation="8dp"
        android:translationZ="8dp"
        android:textColor="@color/white"
        android:fontFamily="@font/new_era_casual_bold"
        android:layout_marginLeft="20sp"
        android:text="@string/find"
        app:layout_constraintStart_toEndOf="@+id/editNumber"
        app:layout_constraintTop_toTopOf="@+id/editNumber" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80sp"
        android:textColor="@color/textColor"
        android:fontFamily="@font/new_era_casual_italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumber" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="37sp"
        app:strokeColor="@color/naranjaPersonalOscuro"
        android:backgroundTint="@color/naranjaPersonalOscuro"
        app:cornerRadius="0dp"
        android:elevation="8dp"
        android:translationZ="8dp"
        android:textColor="@color/white"
        android:fontFamily="@font/new_era_casual_bold"
        android:text="@string/btnDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResult" />



</androidx.constraintlayout.widget.ConstraintLayout>